164798914-story(articleClap) User clap for article
- implement clap functionality on articles
- write test for the feature

[Deliver #164798914]
