# server/routes/article.routes.js
@@ -1,5 +1,5 @@
 import express, { Router } from 'express';
-import { ArticleController, CommentController } from '../controllers';
+import { ArticleController, CommentController, ClapController } from '../controllers';
 import { tryCatch, createArticle, checkComments } from '../utils';
 import { signInAuth } from '../utils/users/permissions.util';
 
@@ -12,5 +12,7 @@ router.post('/', [signInAuth, createArticle], tryCatch(ArticleController.createA
 router.post('/:slug/comment', [checkComments, signInAuth], tryCatch(createComments));
 
 router.post('/:slug/comment/:commentid/thread', [checkComments, signInAuth], tryCatch(threadedComment));
+
+router.post('/:articleId/claps', signInAuth, tryCatch(ClapController.createClap));
 
 export default router;
