# swagger.yml
@@ -413,7 +413,36 @@ paths:
             message: "Article was not created successfully"
         503:
           description: "Some error occurred. Please try again"
-
+  /clap:
+    post:
+      tags:
+      - Claps
+      summary: "Clap for an article"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "User can clap for created articles"
+        required: true
+        schema:
+          $ref: "#/definitions/Clap"
+      responses:
+        201:
+          description: "Clap successfully created"
+          example:
+            status: 201
+            message: "Clap successfully created"
+            data:
+              - token: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY1NmY4Y2Y4LWIwNzQtNDE1ZC04MDYxLWVjZDBkMzgzZjQ0NiIsImlhdCI6MTU1NDEwODc4MSwiZXhwIjoxNTU2NzAwNzgxfQ.e6K_0U36u3b16JFsAwcO1fJA0onVSKa1KRGQVFEhm3g"
+                user:
+                  firstname: "Zokky 2"
+                  lastname: "Umeilechukwu"
+                  email: "o.yes@gmail.com"
+        503:
+          description: "Some error occurred"
 definitions:
   User:
     type: "object"
@@ -499,3 +528,8 @@ definitions:
     properties:
       comment:
         type: "string"
+  Clap:
+    type: "string"
+    properties:
+      articleId:
+         type: "string"
